# framework2plus

./: .gitignore  AI Models - SumoPod.html  CHANGELOG.md  DOCUMENTATION.md  PROJECT_SUMMARY.md  README.md  migrate.bat  package-lock.json  package.json  vercel.json
.github/workflows/: build-tauri.yml
AI Models - SumoPod_files/: index-ao62nxP2.js.download  index-cJBHbPzU.css
api/: ai-proxy.js
docs/: WINDOWS-INSTALLER.md
public/: index.html
public/js/: ide-agent.js  ide-builder-ui.js  ide-intelligence.js  ide-shell-ui.js  ide-terminal.js
scripts/: build-dist.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
